k8s/staging/service-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudcommander-api
  namespace: cloudcommander-staging
spec:
  selector:
    app: cloudcommander
    component: api
  ports:
    - name: http
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudcommander-api
  namespace: cloudcommander-staging
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts: ["localhost"]
      secretName: cloudcommander-api-tls
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloudcommander-api
                port:
                  number: 80
